--- a/src/css/feriados.css
+++ b/src/css/feriados.css
@@ -22,16 +22,19 @@
  :root {
   color-scheme: light dark;
   --txt-color: #343434;
+  --txt-day-color: #ffffff;
   --bg-color: #fdfdfd;
   --border-color: #d6d6d6;
-  --bg-highlight-color: #10ac84;
+  --bg-highlight-color: #bc0506;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --txt-color: #fff;
+    --txt-day-color: #292947;
     --bg-color: #2d2d2d;
     --border-color: #4b5454;
+    --bg-highlight-color: #14d298;
   }
 }
 
@@ -147,6 +150,7 @@ nav {
   width: 55px;
   text-align: center;
   font-size: 15px;
+  font-weight: 400;
 }
 
 .day time strong {
@@ -161,7 +165,7 @@ nav {
   padding: 10px;
   margin: 0 10px;
   font-weight: 400;
-  color: white;
+  color: var(--txt-day-color);
   background-color: var(--bg-highlight-color);
 }
 
