--- a/src/css/feriados.css
+++ b/src/css/feriados.css
@@ -107,7 +107,52 @@ header {
   width: 55px;
   border: none;
   background: transparent;
-  filter: grayscale(1);
+  opacity: 0.8;
+}
+
+.bright-env:focus {
+  outline: none;
+}
+
+.icon {
+  position: absolute;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+}
+
+.moon {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  box-shadow: -10px 10px 0 0 var(--txt-color);
+  transform: scale(0.55);
+  top: 5px;
+  left: 18px;
+}
+
+.sun {
+  transform: scale(0.35);
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  top: 16px;
+  left: 16px;
+  background-color: var(--txt-color);
+}
+
+.sun:after {
+  box-shadow: var(--txt-color) 0px -23px 0px, var(--txt-color) 0px 23px 0px, var(--txt-color) 23px 0px 0px, var(--txt-color) -23px 0px 0px, var(--txt-color) 15px 15px 0px, var(--txt-color) -15px 15px 0px, var(--txt-color) 15px -15px 0px, var(--txt-color) -15px -15px 0px;
+  content: '';
+  width: 8px;
+  height: 8px;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: scale(1);
+  border-radius: 50%;
+  margin: -4px 0px 0px -4px;
+  transition: all 0.35s ease 0s;
 }
 
 nav {
