--- a/src/css/feriados.css
+++ b/src/css/feriados.css
@@ -218,7 +218,6 @@ header {
   transform: scale(1);
   border-radius: 50%;
   margin: -4px 0px 0px -4px;
-  transition: all 0.35s ease 0s;
 }
 
 nav {
@@ -262,20 +261,16 @@ nav {
 
 .timeline {
   list-style: none;
-  border-left: 1px solid var(--border-color);
-  width: 76%;
-  position: relative;
-  left: 18%;
-  padding: 20px 10px;
+  padding: 20px;
 }
 
 .day {
   position: relative;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 
-.day:before {
+/* .day:before {
   content: '';
   display: block;
   width: 9px;
@@ -285,13 +280,11 @@ nav {
   left: -15px;
   border-radius: 100%;
   background: var(--bg-highlight-color);
-}
+} */
 
 .day time {
   position: absolute;
-  left: -74px;
-  width: 55px;
-  text-align: center;
+  width: 35px;
   font-size: 15px;
   font-weight: 400;
 }
@@ -304,6 +297,7 @@ nav {
 .day a {
   display: block;
   position: relative;
+  margin-left: 45px;
 }
 
 .day p {
@@ -494,21 +488,34 @@ main {
   fill: var(--txt-color);
   opacity: 0.7;
 }
+
+.toggle {
+  position: absolute;
+  border: none;
+  background: none;
+  bottom: 50px;
+  left: 50%;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  margin-left: -30px;
+}
+
+.toggle:focus {
+  outline: none;
+}
+
 .arrow {
   border: solid var(--border-color);
   display: inline-block;
   padding: 3px;
   transform: rotate(-135deg) skew(-5deg, -5deg);
-  position: absolute;
-  bottom: 50px;
-  left: 50%;
   width: 10px;
   height: 10px;
-  z-index: 1;
-
   border-width: 0 3px 3px 0;
+  margin-top: 15px;
 }
 
-.arrow-down {
+.toggle.arrow-down .arrow {
   border-width: 3px 0 0 3px;
 }
